[package]
name = "nucro"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
rusqlite = "0.33.0"

[lints.clippy]
cargo        = { priority = -1, level = "warn" }
complexity   = { priority = -1, level = "warn" }
correctness  = { priority = -1, level = "warn" }
nursery      = { priority = -1, level = "warn" }
pedantic     = { priority = -1, level = "warn" }
perf         = { priority = -1, level = "warn" }
restriction  = { priority = -1, level = "warn" }
style        = { priority = -1, level = "warn" }
suspicious   = { priority = -1, level = "warn" }